# Cartpole_mujoco

./: CMakeLists.txt  README.md  main.cpp
assets/cartpole/: cartpole.xml
auto_diff/: CppAdInterface.cpp  CppAdInterface.h  CppAdSparsity.cpp  Types.h
controllers/: controller.h
controllers/direct_multiple_shooting/: direct_multiple_shooting.cpp  direct_multiple_shooting.h  hpipm_interface.cpp  hpipm_interface.h  hpipm_wrapper.cpp  hpipm_wrapper.h
controllers/iLQR/: dynamics.cpp  dynamics.h  iLQR.cpp  iLQR.h  interpolation.h  mpc.h  param.yaml
controllers/idto/: convergence_criteria_tolerances.h  foot_slip_and_clearance_cost.h  idto.h  inverse_dynamics_partials.h  problem_definition.h  solver_parameters.h  trajectory_optimizer.cc  trajectory_optimizer.h  trajectory_optimizer_impl.h  trajectory_optimizer_solution.h  trajectory_optimizer_state.h  velocity_partials.h  warm_start.h
controllers/mpc/: mpc.h
cppad_generated/cartpole_dynamics_systemFlowMap/cppad_generated/: cartpole_dynamics_systemFlowMap_atomic_functions.c  cartpole_dynamics_systemFlowMap_forward_zero.c  cartpole_dynamics_systemFlowMap_info.c  cartpole_dynamics_systemFlowMap_jacobian_sparsity.c  cartpole_dynamics_systemFlowMap_sparse_jacobian.c  cppad_cg_models.c
cppad_generated/foot_slip_and_clearance_systemFlowMap/cppad_generated/: cppad_cg_models.c  foot_slip_and_clearance_systemFlowMap_atomic_functions.c  foot_slip_and_clearance_systemFlowMap_forward_zero.c  foot_slip_and_clearance_systemFlowMap_hessian_sparsity.c  foot_slip_and_clearance_systemFlowMap_info.c  foot_slip_and_clearance_systemFlowMap_jacobian_sparsity.c  foot_slip_and_clearance_systemFlowMap_sparse_hessian.c  foot_slip_and_clearance_systemFlowMap_sparse_jacobian.c
cppad_generated/quadruped_dynamics_systemFlowMap/cppad_generated/: cppad_cg_models.c  quadruped_dynamics_systemFlowMap_atomic_functions.c  quadruped_dynamics_systemFlowMap_forward_zero.c  quadruped_dynamics_systemFlowMap_info.c  quadruped_dynamics_systemFlowMap_jacobian_sparsity.c  quadruped_dynamics_systemFlowMap_sparse_jacobian.c  quadruped_dynamics_systemFlowMap_sparse_jacobian__1.c  quadruped_dynamics_systemFlowMap_sparse_jacobian__2.c
examples/: dynamics.cpp  dynamics.h  param.yaml
examples/cartpole/: cartpole_constraint.h  cartpole_cost.cpp  cartpole_cost.h  cartpole_dynamics.cpp  cartpole_dynamics.h  cartpole_example.h  param.yaml
examples/common/: cost.h  dynamics.h  example.h
examples/common/constraint/: BoxConstraint.h  constraint.h
examples/common/cost/: cost.h
examples/common/dynamics/: dynamics.h
examples/quadruped/: ModelHelperFunctions.cpp  ModelHelperFunctions.h  RotationTransforms.h  pacing.yaml  param.yaml  quadruped_cost.cpp  quadruped_cost.h  quadruped_dynamics.cpp  quadruped_dynamics.h  quadruped_example.h  state_estimator.cpp  state_estimator.h  utils.h
models/quadruped/: a1.xml
models/quadruped/urdf/: a1.urdf
optimizer/: penta_diagonal_matrix.cc  penta_diagonal_matrix.h  penta_diagonal_solver.h  problem_definition.h  solver_parameters.h  trajectory_optimizer.h  trajectory_optimizer_solution.cc  trajectory_optimizer_state.h  trajectory_optimizer_workspace.h
test/: testForwardDynamics.cpp  testHpipmMpc.cpp  testMultipleShooting.cpp  testOptimizer.cpp
test/config/: dms.yaml  hpipmMpc.yaml  optimizer.yaml
